[package]
name = "kafka_port"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
log = "0.4.21"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
tokio = { version = "1.35.1", features = ["full"] }

